[package]
name = "memo-program"
version = "1.0.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-account-info = "2.1.0"
solana-instruction = "2.1.0"
solana-msg = "2.1.0"
solana-program-entrypoint = "2.1.0"
solana-program-error = "2.1.0"
solana-pubkey = "2.1.0"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]